--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,9 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap'); */
-
-html {
+html,
+body {
   font-family: 'Poppins', sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
